Fix #4 - Doesn't work with light themes

--- a/styles/delete-lines.less
+++ b/styles/delete-lines.less
@@ -27,7 +27,7 @@
       border: 1px solid @input-border-color;
       border-radius: 2px;
       padding: @component-padding / 2;
-      color: white;
+      color: @text-color;
     }
   }
 
